# gitterm

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD.md  CLAUDE.md  Cargo.toml  Info.plist  README.md  agent-workflow.config.json  build.rs  debug_freezes.sh  test_markdown.md
.agent-workflow/overlays/skills/: build.md  lint.md  pr-ready.md  test.md
.agents/skills/checkpoint/: SKILL.md
.agents/skills/lint/: SKILL.md
.agents/skills/pr-ready/: SKILL.md
.agents/skills/test/: SKILL.md
.claude/: resume.md
.claude/commands/: build.md  checkpoint.md  lint.md  pr-ready.md  test.md
.githooks/: commit-msg  pre-commit
.github/: pull_request_template.md
.github/workflows/: build.yml  ci.yml  windows-build.yml
.plans/: browser-reference-implementation-workflow.md  chats-panel.md  claude-tab-spike.md  plans-viewer-integration.md  remote-gitterm-agent-architecture.md
assets/: agent_chat.html  icon.icns  plans-viewer.html
design/: CLAUDE_SIDEBAR.md  MERMAID_TEST.md  TERMINAL_BACKEND_NOTES.md  WORKSPACE_DESIGN.md  claude-code-ide-mockup.html  claude-config-ui-mockup.html  gitterm-architecture.excalidraw  niri-inspired-mockup.html  workspace-mockup.html
docs/: BROWSER_CONTROL_ARCHITECTURE.md
examples/: agent_probe.rs  claude_pipe_test.rs  claude_webview_test.html  claude_webview_test.rs  pi_webview_test.html  pi_webview_test.rs
proto/gitterm/agent/v1/: agent.proto
scripts/: bundle.sh  generate_icon.swift
src/: agent.rs  browser_control.rs  browser_mcp.rs  chats.rs  config.rs  events.rs  lib.rs  log_server.rs  main.rs  markdown.rs  plans_viewer.rs  services.rs  source.rs  theme.rs  webview.rs
src/agentd/: client.rs  config.rs  git.rs  mod.rs  protocol.rs  server.rs  sessions.rs
src/tab/: agent.rs  mod.rs
