[package]
name = "gitterm-v4"
version = "4.0.0"
edition = "2021"
default-run = "gitterm-v4"
description = "A Git status viewer with integrated terminal, built with Iced"

[lib]
name = "gitterm"
path = "src/lib.rs"

[[bin]]
name = "gitterm-v4"
path = "src/main.rs"

[[bin]]
name = "gitterm-v4-agent"
path = "src/bin/gitterm-agent/main.rs"

[dependencies]
iced = { version = "0.14", features = ["tokio", "image"] }
iced_term = { path = "../iced_term_fork" }
muda = "0.17"
wry = "0.48"
pulldown-cmark = "0.12"
git2 = "0.19"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
rfd = "0.15"
similar = "2.6"
warp = "0.3"
tonic = { version = "0.12", features = ["transport", "tls-roots"] }
portable-pty = "0.8"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "process", "io-util", "macros", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = "0.7"
chrono = "0.4"
libc = "0.2"
base64 = "0.22"
futures-util = "0.3"
hyper = { version = "0.14", features = ["client", "http1", "tcp"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"] }
tokio-tungstenite = "0.21"
url = "2.5"
axum = "0.8"
rmcp = { version = "2.2", features = ["server", "transport-streamable-http-server"] }
schemars = "1.0"
whisper-rs = { version = "0.15", optional = true }
cpal = { version = "0.15", optional = true }

[features]
default = ["stt"]
stt = ["whisper-rs", "cpal"]
excalidraw = []

[package.metadata.bundle]
name = "GitTerm V4"
identifier = "com.cree8.gitterm.v4"
icon = ["assets/icon.icns"]
version = "4.0.0"
short_description = "GitTerm V4 development environment"
copyright = "Copyright 2025 Cree8"
category = "Developer Tool"
osx_minimum_system_version = "13.0"

[dev-dependencies]
tempfile = "3"
tao = "0.31"
rmcp = { version = "2.2", features = ["client", "transport-streamable-http-client-reqwest"] }

[build-dependencies]
winres = "0.1"
tonic-build = "0.12"
protoc-bin-vendored = "3"
